# CrashRustler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  apple-sanitizer-tahoe-bug.md  build.rs
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml  stale.yml
scripts/: codesign.sh
src/: accessors.rs  analysis.rs  backtrace.rs  crash_rustler.rs  dummy.rs  exploitability.rs  formatting.rs  init.rs  lib.rs  main.rs  memory.rs  test_helpers.rs  types.rs
src/unwind/: arch.rs  compact_unwind.rs  cursor.rs  dwarf_cfi.rs  dwarf_expr.rs  frame_pointer.rs  macho.rs  mod.rs  registers.rs
test-fixtures/: README.md
test-fixtures/asan/: Cargo.toml
test-fixtures/asan/src/: main.rs
test-fixtures/c-asan/: Makefile  crash_dummy.c
test-fixtures/c-asan-multilib/: Makefile  lib_buggy.c  lib_safe.c  main.c
test-fixtures/c-cfi/: Makefile  crash_dummy.c
test-fixtures/c-intsan/: Makefile  crash_dummy.c
test-fixtures/c-tsan/: Makefile  crash_dummy.c
test-fixtures/c-ubsan/: Makefile  crash_dummy.c
test-fixtures/tsan/: Cargo.toml
test-fixtures/tsan/src/: main.rs
tests/: README.md  asan_exc_handler.rs  attach_exc_handler.rs  c_asan_exc_handler.rs  c_asan_multilib_exc_handler.rs  c_cfi_exc_handler.rs  c_intsan_exc_handler.rs  c_tsan_exc_handler.rs  c_ubsan_exc_handler.rs  exc_handler.rs  launchd_exc_handler.rs  tsan_exc_handler.rs
